# path_addresses.go
@@ -1,17 +1,3 @@
-// Copyright © 2018 Immutability, LLC
-//
-// Licensed under the Apache License, Version 2.0 (the "License");
-// you may not use this file except in compliance with the License.
-// You may obtain a copy of the License at
-//
-//     http://www.apache.org/licenses/LICENSE-2.0
-//
-// Unless required by applicable law or agreed to in writing, software
-// distributed under the License is distributed on an "AS IS" BASIS,
-// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-// See the License for the specific language governing permissions and
-// limitations under the License.
-
 package main
 
 import (
@@ -96,7 +82,6 @@ func addressesPaths(b *EthereumBackend) []*framework.Path {
 	}
 }
 
-
 // A UserNameParams parameter model.
 //
 // This is used for operations that want the ID of a user in the path
@@ -109,7 +94,7 @@ type AddressParam struct {
 	Address string `json:"address"`
 }
 
-// Me swagger:route POST /addresses/{address} accountNames pathAddressesRead
+// Me swagger:route POST /addresses/{address} Addresses pathAddressesRead
 //
 // Handler returning Account Names for an Address.
 //
@@ -139,13 +124,17 @@ func (b *EthereumBackend) pathAddressesRead(ctx context.Context, req *logical.Re
 	}, nil
 }
 
-// Me swagger:route POST /addresses pathAddressesList
-//
-// Handler returning Account Names for an Address.
-//
-// Responses:
-//        200:
-// 			type: github.com/hashicorp/vault/logical/ListResponse
+// swagger:operation  POST /addresses Addresses pathAddressesList
+// ---
+// summary: List the addresses
+// headers:
+// - name: X-Vault-Token
+//   description: Vault Token
+//   type: string
+//   required: true
+// responses:
+//   "200":
+//     type: github.com/hashicorp/vault/logical/ListResponse
 func (b *EthereumBackend) pathAddressesList(ctx context.Context, req *logical.Request, data *framework.FieldData) (*logical.Response, error) {
 	_, err := b.configured(ctx, req)
 	if err != nil {
